# ten-vad

examples_onnx/: CMakeLists.txt
include/: ten_vad.h
src/: aed.cc  aed.h  ten_vad.cc
